# VibeGaurd

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_AUDIT.md  INSTALLATION.md  LICENSE  PROJECT_STATUS.md  README.md  SECURITY.md  VIBEGUARD_BUILD_REPORT.md  deny.toml  pyproject.toml  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
crates/vibeguard-ai/: Cargo.toml
crates/vibeguard-ai/src/: lib.rs
crates/vibeguard-auth/: Cargo.toml
crates/vibeguard-auth/src/: lib.rs
crates/vibeguard-cache/: Cargo.toml
crates/vibeguard-cache/src/: lib.rs
crates/vibeguard-cli/: Cargo.toml
crates/vibeguard-cli/src/: lib.rs
crates/vibeguard-config/: Cargo.toml
crates/vibeguard-config/src/: lib.rs
crates/vibeguard-context/: Cargo.toml
crates/vibeguard-context/src/: lib.rs
crates/vibeguard-core/: Cargo.toml
crates/vibeguard-core/src/: lib.rs
crates/vibeguard-deps/: Cargo.toml
crates/vibeguard-deps/src/: lib.rs
crates/vibeguard-git/: Cargo.toml
crates/vibeguard-git/src/: lib.rs
crates/vibeguard-planner/: Cargo.toml
crates/vibeguard-planner/src/: lib.rs
crates/vibeguard-plugin-sdk/: Cargo.toml
crates/vibeguard-plugin-sdk/src/: lib.rs
crates/vibeguard-prompt/: Cargo.toml
crates/vibeguard-prompt/src/: lib.rs
crates/vibeguard-report/: Cargo.toml
crates/vibeguard-report/src/: lib.rs
crates/vibeguard-repository/: Cargo.toml
crates/vibeguard-repository/src/: lib.rs
crates/vibeguard-risk/: Cargo.toml
crates/vibeguard-risk/src/: lib.rs
crates/vibeguard-runner/: Cargo.toml
crates/vibeguard-runner/src/: lib.rs
crates/vibeguard-scanner/: Cargo.toml
crates/vibeguard-scanner/src/: lib.rs
crates/vibeguard-secrets/: Cargo.toml
crates/vibeguard-secrets/src/: lib.rs
crates/vibeguard-verifier/: Cargo.toml
crates/vibeguard-verifier/src/: lib.rs
docs/: AGENT_INTEGRATION.md  ARCHITECTURE.md  INTELLIGENCE.md  MIGRATION_AUDIT.md  MIGRATION_STATUS.md  PRIVACY_AND_THREAT_MODEL.md
docs/adr/: 0001-system-git-transport.md  0002-no-python-core-runtime.md
examples/messy-expo/: .gitignore  app.json  package.json
examples/messy-expo/.vibeguard/: context.md  pack.md  prompt.md  task.md
examples/messy-expo/src/navigation/: AppNavigator.tsx
examples/messy-expo/src/screens/: Login.tsx
examples/messy-expo/src/services/: auth.ts
legacy-python/tests/: test_banner.py  test_cli_global.py  test_cli_mvp_flow.py  test_context_builder.py  test_packaging.py  test_prompt_builder.py  test_risk_engine.py  test_verifier.py
legacy-python/tests/baselines/python/: README.md
legacy-python/tests/compatibility/: README.md
legacy-python/tests/fixtures/malformed-config-project/: .vibeguard.toml
legacy-python/tests/fixtures/node-project/: package.json
legacy-python/tests/fixtures/secret-fixture-project/: .env.example
legacy-python/tests/fixtures/secret-fixture-project/src/: config.ts
legacy-python/vibeguard/: __init__.py  __main__.py  agents.py  config.py  security.py
legacy-python/vibeguard/core/: builders.py  detector.py  diff_analyzer.py  risk_engine.py
legacy-python/vibeguard/ui/: quickstart.py
python-client/: PUBLISHING.md  README.md  pyproject.toml
python-client/src/vibegaurd_client/: __init__.py  cli.py  client.py
python-client/tests/: test_client.py
tests/: test_banner.py  test_cli_global.py  test_cli_mvp_flow.py  test_context_builder.py  test_cross_platform_and_security.py  test_detector.py  test_diff_analyzer.py  test_next_prompt.py  test_plan_generator.py  test_scanner.py  test_token_packer.py  test_v2_governance.py
tests/fixtures/git-diff-project/: README.md
tests/fixtures/monorepo-project/: package.json
tests/fixtures/python-project/: pyproject.toml
tests/fixtures/python-project/src/: auth.py
tests/fixtures/python-project/tests/: test_auth.py
vibeguard/: __init__.py  cli.py  governance_report.py  intelligence.py  snapshot.py
vibeguard/core/: __init__.py  builders.py  detector.py  diff_analyzer.py  report_generator.py  scanner.py  token_packer.py  verifier.py
vibeguard/ui/: __init__.py  banner.py
vibeguard/utils/: __init__.py  command_runner.py  os_utils.py
(+1 files in other folders)
