[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/Sarthak702-droid/VibeGaurd"
homepage = "https://github.com/Sarthak702-droid/VibeGaurd"
authors = ["Sarthak Tripathy"]

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
directories = "6.0"
fs2 = "0.4"
globset = "0.4"
ignore = "0.4"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.15"
thiserror = "2.0"
toml = "0.8"
url = "2.5"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
