[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibeguard"
version = "0.1.0"
description = "Guardrails for vibe-coded software."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "VibeGuard contributors" }]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2",
  "jinja2>=3.1",
  "pyyaml>=6",
  "pathspec>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[project.scripts]
vibeguard = "vibeguard.cli:app"
vg = "vibeguard.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

