[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "vibegaurd-rust-client"
version = "0.1.0"
description = "Python client and VIBEGAURD CLI for the Rust-native VibeGuard backend."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Sarthak Tripathy" }]
keywords = ["vibeguard", "rust", "git", "repository", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Rust",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Security"
]

[project.urls]
Homepage = "https://github.com/Sarthak702-droid/VibeGaurd"
Repository = "https://github.com/Sarthak702-droid/VibeGaurd"

[project.scripts]
VIBEGAURD = "vibegaurd_client.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vibegaurd_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]
