[package]
name = "vibeguard-scanner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
ignore.workspace = true
serde_json.workspace = true
vibeguard-config = { path = "../vibeguard-config" }
vibeguard-core = { path = "../vibeguard-core" }
